--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -2,7 +2,7 @@
 	background-color: #70cacb;
 	padding-top: 30px;
 	padding-bottom: 50px;
-	margin: 0 -15px;
+	padding: 0 15px;
 	
 	&__box {
 		display: flex;
