--- a/src/components/header/navbar/index.scss
+++ b/src/components/header/navbar/index.scss
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     align-items: center;
 	padding: 5px 15px;
-	margin: 0 -15px;
+	padding: 0 15px;
 	background: white;
 	justify-content: space-between;
 
