--- a/src/components/offer/index.scss
+++ b/src/components/offer/index.scss
@@ -3,12 +3,10 @@
 	font-size: 1.4em;
 	font-weight: 700;
 	background-color: #70cacb;
-	margin-left: -15px;
-    margin-right: -15px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 10px 0;
+	padding: 10px 15px;
 	letter-spacing: .5px;
 
 	&__texte {
