--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -6,9 +6,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .home {
 
-	margin-left: -15px;
-	margin-right: -15px;
-
 	&__slider {
 		width: 100%;
 		height: 100%;
@@ -17,6 +14,8 @@ h1, h2, h3, h4, h5, h6 {
 		background-size: cover;
 		min-height: 400px;
 		display: flex;
+		overflow: hidden;
+		position: relative;
 	}
 
 	&__slider-content {
@@ -64,6 +63,7 @@ h1, h2, h3, h4, h5, h6 {
 		bottom: -10%;
 		max-height: 100%;
 		z-index: 2;
+		position: absolute;
 	}
 	&__slider-img2 {
 		width: 275px;
@@ -71,6 +71,7 @@ h1, h2, h3, h4, h5, h6 {
 		left: 15%;
 		bottom: -25%;
 		max-height: 80%;
+		position: absolute;
 	}
 	&__slider-img3 {
 		width: 361px;
@@ -78,6 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 		right: 12.5%;
 		bottom: -20%;
 		max-height: 90%;
+		position: absolute;
 	}
 	&__slider-img4 {
 		width: 223px;
@@ -85,6 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 		right: -30px;
 		top: 10%;
 		max-height: 80%;
+		position: absolute;
 	}
 
 	&__ccm {
@@ -128,6 +131,11 @@ h1, h2, h3, h4, h5, h6 {
 			font-weight: 800;
 			line-height: 1.1;
 		}
+	}
+
+	&__carousel {
+		width: 100%;
+		padding: 40px;
 	}
 
 }
